<resources>
    <string name="app_name">Roja</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">Settings</string>
    <string name="refresh_location">Refresh Location</string>
    <string name="open_rest">Open Restaurant</string>
    <string name="title_activity_scan_">Scan_Activity</string>
    <string name="about_roja">So check this out, Roja lets you find a variety of restaurants and food stalls around you
        without the hassle of
    hunting around. The app allows you to interact with the restaurant\'s menu you are sitting at
        and place orders through it! Neat hey?</string>

    <string name="hello_world">Hello world!</string>
    <string name="fab">floating button</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="checkout">Check Out</string>
    <string name="title_activity_check_out">CheckOutActivity</string>
    <string name="title_activity_menu_items_list">MenuItemsListActivity</string>
    <string name="title_activity_item_description">ItemDescriptionActivity</string>
    <string name="title_activity_edit_item">EditItemActivity</string>
    <string name="description">We sell the best local cuisine in this area, our menu is vast and has something for everyone</string>
    <string name="share_body">Did you know you can easily find eateries around you and place
                 orders from them using Roja? Download Roja from the Play Store and see for yourself.\n\n</string>

    <string name="orderMessage1">Your Order Is Ready</string>
    <string name="orderMessage2">Collect it at the counter</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_fragment">HomeFragment</string>
    <string name="check_out">Check Out</string>
    <string name="add_new_address">Add Address</string>
    <string name="save_changes">Save Changes?</string>
    <string name="clear_cart">Clear All Items In Cart?</string>
    <string name="email_registered">This email has already been registered</string>
    <string name="waiter_note">Waiter Note</string>
    <string name="send_order">Send Order To Waiter?</string>
    <string name="toolbar_title">Toolbar Title</string>
    <string name="add_to_cart">Add This Item To Your Cart?</string>
    <string name="write_feedback">Write your feedback here...</string>
    <string name="remind_review">Remind me to review last visited restaurants</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="email_hint">e-mail</string>
    <string name="street_hint">Street Address (e.g. 12 Pigeon Street, Halfway Gardens, Midrand)</string>
    <string name="complex_hint">Unit No. and Complex ( Optional )</string>
    <string name="label_hint">Address Label (e.g. Home)</string>
    <string name="reviews">Reviews</string>
    <string name="save">Save</string>
    <string name="claim">Claim</string>
    <string name="tap_reviews">Tap To Read Reviews</string>
    <string name="no_extras">No Available Extras</string>
    <string name="name_hint">Your Name</string>
    <string name="surname_hint">Your Surname</string>
    <string name="password_hint">password</string>
    <string name="something_went_wrong">Something Went Wrong. Please Try Again</string>
    <string name="no_restaurants">No Listed Restaurants Nearby</string>
    <string name="reset_key">Send Reset Key</string>
    <string name="default_rate">5.0</string>
    <string name="specials">SPECIALS</string>
    <string name="remember_me">Remember Me</string>
    <string name="hot_week">Hot This Week</string>
    <string name="total">Total</string>
    <string name="cart_total">Cart Total</string>
    <string name="unable_to_connect">Unable To Connect</string>
    <string name="registered_email_hint">Enter your registered e-mail</string>
    <string name="additional_info_hint">Additional Info(e.g Restaurant\'s full address, telephone, email)</string>
    <string name="city_hint">City or Town</string>
    <string name="address_book">Address Book</string>
    <string name="address">Address</string>
    <string name="write_review_hint">Write Your Review(200 Characters)</string>
    <string name="click">Click Here</string>
    <string name="no_visits">You Haven\'t Visited Any Restaurants</string>
    <string name="no_points">No Accumulated Points</string>
    <string name="log_in">Log In</string>
    <string name="rate">Rate!</string>
    <string name="features">Features</string>
    <string name="halal">Halal</string>
    <string name="home_delivery">Home Delivery</string>
    <string name="serves_alcohol">Serves Alcohol</string>
    <string name="wifi">WiFi Available</string>
    <string name="actual_total">Actual Total</string>
    <string name="enter_key">Enter the key you received from your email</string>
    <string name="no_orders">No Orders</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="accept_policy">I Accept The Privacy Policy</string>
    <string name="no_placed_orders">No Placed Orders</string>
    <string name="unable_to_locate">Unable To Detect Location</string>
    <string name="no_favourites">You Have No Favourites</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_reviews">No Reviews</string>
    <string name="confirmation_key">Confirmation Key</string>
    <string name="trading_hours">Trading Hours</string>
    <string name="default_price">0.00</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="re_enter_new_password">Re-enter New Password</string>
    <string name="change_password">Change Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="about_us">About Us</string>
    <string name="promos_soon">No Promotions Available</string>
    <string name="reset_key_button">Reset Key</string>
    <string name="resend_key_button">Resend Reset Key</string>
    <string name="resend_key_button2">Resend Key</string>
    <string name="no_specials">Sorry, no specials today</string>
    <string name="no_history">No History</string>
    <string name="cart_empty">Cart Is Empty</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="type_note_hint">Type Note For Waiter</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_menu_item_reviews">MenuItemReviewsActivity</string>
    <string name="title_activity_rate_restaurant">RateRestaurantActivity</string>
    <string name="title_activity_trends">TrendsActivity</string>
    <string name="title_activity_trend_reviews">TrendReviewsActivity</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="title_activity_around_me">AroundMeActivity</string>
    <string name="title_activity_restaurant_around_me">RestaurantAroundMeActivity</string>
    <string name="title_activity_off_site_menu">OffSiteMenuActivity</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="title_activity_information">InformationActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>
    <string name="title_activity_suggestion">SuggestionActivity</string>
    <string name="title_activity_promotion">PromotionActivity</string>
    <string name="title_activity_restaurant_week">RestaurantWeekActivity</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_notifications">NotificationsActivity</string>
    <string name="forgotPasswordText">Forgot Password?</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_nested_category">NestedCategory</string>
    <string name="title_activity_points">PointsActivity</string>
    <string name="title_activity_claims">ClaimsActivity</string>
    <string name="title_activity_splash_order">SplashOrder</string>
    <string name="title_activity_promo_splash">PromoSplashActivity</string>
    <string name="domain">www.dijoapp.co.za</string>
    <string name="email_confirmation_path"></string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="update_app">This version of Roja is outdated and no longer supported. Please update the app</string>
    <string name="update_button">Update Roja</string>
    <string name="facebook_app_id">543956382426229</string>
    <string name="title_activity_favourite">FavouriteActivity</string>
    <string name="title_activity_mscan">MScanActivity</string>
    <string name="title_activity_address">AddressActivity</string>
    <string name="title_activity_add_address">AddAddressActivity</string>
    <string name="title_activity_edit_address">EditAddressActivity</string>
</resources>
