<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.natech.roja.LogIn.SignUpActivity"
    android:background="@color/myPrimaryColor">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/roja_logo"
        android:layout_above="@+id/fieldsLayout2"
        android:layout_centerVertical="true"
        android:layout_alignParentTop="true"
        android:id="@+id/logo"

        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/fieldsLayout2">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/messageTVSign"
            android:visibility="gone"
            android:background="@color/errorColor"
            android:textColor="@color/white"
            android:gravity="center"
            />
        <EditText
            android:layout_marginTop="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nameED"
            android:theme="@style/MyEditTextTheme"
            android:hint="@string/name_hint"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/surnameED"
            android:layout_below="@+id/nameED"
            android:theme="@style/MyEditTextTheme"
            android:hint="@string/surname_hint"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailED"
            android:theme="@style/MyEditTextTheme"
            android:hint="@string/email_hint"
            android:layout_below="@+id/surnameED"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passowrd1ED"
            android:theme="@style/MyEditTextTheme"
            android:hint="@string/password_hint"
            android:layout_below="@+id/emailED"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passowrd2ED"
            android:layout_below="@+id/passowrd1ED"
            android:theme="@style/MyEditTextTheme"
            android:hint="@string/re_enter_password"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/accept_policy"
            android:gravity="center"
            android:textColor="@color/white"
            android:theme="@style/MyEditTextTheme"
            android:id="@+id/privacyCheckBox"
            android:layout_below="@+id/passowrd2ED"
            android:layout_centerHorizontal="true" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:id="@+id/signUpBtn"
            android:layout_below="@+id/privacyCheckBox"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:background="@drawable/my_buttons"
            android:layout_marginTop="12dp"/>

        </RelativeLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/confirmationLayout"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/message"
            android:text="@string/enter_key"
            android:textColor="@color/white"
            android:gravity="center"
            />
        <EditText
            android:layout_marginTop="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/confirmKeyED"
            android:theme="@style/MyEditTextTheme"
            android:hint="@string/confirmation_key"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/confirmBtn"
            android:layout_below="@+id/confirmKeyED"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:background="@drawable/my_buttons"
            android:layout_marginTop="12dp"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/resend_key_button2"
            android:id="@+id/resendBtn"
            android:layout_below="@+id/confirmBtn"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:background="@drawable/my_buttons"
            android:layout_marginTop="12dp"/>

        </RelativeLayout>
   <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:id="@+id/snackbarPosition">
    </android.support.design.widget.CoordinatorLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fieldsLayout2"
        android:id="@+id/privacyButton"
        android:textSize="12sp"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/white"
        android:background="@drawable/button_selector"
        android:text="@string/privacy_policy"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
