<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myPrimaryColor"
    tools:context="com.natech.roja.LogIn.ForgotPasswordActivity">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/roja_logo"
        android:id="@+id/logo1"
        android:layout_above="@+id/emailLayout"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/logo2"
        android:visibility="gone"
        android:src="@drawable/roja_logo"
        android:layout_above="@+id/resetPasswordLayout"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/emailLayout"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/message"
            android:text="@string/registered_email_hint"
            android:textColor="@color/white"
            android:gravity="center"
            />
        <EditText
            android:layout_marginTop="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailED"
            android:theme="@style/MyEditTextTheme"
            android:hint="@string/email_hint"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_key"
            android:id="@+id/resetKeyBtn"
            android:layout_below="@+id/emailED"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:background="@drawable/my_buttons"
            android:layout_marginTop="12dp"/>
        </RelativeLayout>
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/resetPasswordLayout"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/message2"
            android:text="@string/enter_key"
            android:textColor="@color/white"
            android:gravity="center"
            />
        <EditText
            android:layout_marginTop="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/resetKeyED"
            android:theme="@style/MyEditTextTheme"
            android:hint="@string/reset_key_button"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password1ED"
            android:theme="@style/MyEditTextTheme"
            android:hint="@string/new_password"
            android:layout_below="@+id/resetKeyED"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password2ED"
            android:theme="@style/MyEditTextTheme"
            android:hint="@string/re_enter_password"
            android:layout_below="@+id/password1ED"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:id="@+id/resetBtn"
            android:layout_below="@+id/password2ED"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:background="@drawable/my_buttons"
            android:layout_marginTop="12dp"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/resend_key_button"
            android:id="@+id/resendResetKeyBtn"
            android:layout_below="@+id/resetBtn"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:background="@drawable/my_buttons"
            android:layout_marginTop="12dp"/>

        </RelativeLayout>
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:id="@+id/snackbarPosition">
    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>
