<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/add_to_cart"
        android:id="@+id/textView2"
        android:layout_centerHorizontal="true" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_gravity="center"
        android:weightSum="2">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/yes"
            android:textColor="@color/myPrimaryColor"
            android:background="@drawable/cart_button_selector"
            android:layout_weight="1"
            android:id="@+id/yesAdd"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/no"
            android:background="@drawable/cart_button_selector"
            android:id="@+id/noAdd"
            android:textColor="@color/myPrimaryColor"
            android:layout_weight="1"
            android:layout_alignParentRight="true"/>

        </LinearLayout>

</RelativeLayout>